# rq-lab

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: ricequant-doc-index.md
.planning/: RICEQUANT_FULL_PIPELINE.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phase1/: PLAN.md
config/: __init__.py  credentials.example.py
data/: DOWNLOAD_PROGRESS.md
docs/: FULL_PIPELINE_GUIDE.md  README.md  backtest.md
docs/brainstorms/: 2026-04-23-backtest-module-requirements.md
docs/joinquant/: JOINQUANT_FACTOR_RESEARCH.md
docs/open-source/: FACTOR_ANALYZER_COMPARISON.md  FACTOR_RESEARCH_ADVANCED_FEATURES.md  JOINQUANT_RICEQUANT_FACTOR_COMPARISON.md  RQALPHA_OPEN_SOURCE_GUIDE.md  extracted_factors_operators.json
docs/ricequant-platform/: RICEQUANT_PLATFORM_GUIDE.md
docs/rqalpha-plus/: RQALPHA_PLUS_API_REFERENCE.md  RQALPHA_PLUS_DOCS.md
docs/rqdata/: RQDATA_DOCS.md
docs/rqfactor/: RQFACTOR_ADVANCED.md  RQFACTOR_DOCS.md
docs/rqoptimizer/: RQOPTIMIZER_API.md  RQOPTIMIZER_DOCS.md
docs/rqpattr/: RQPATTR_DOCS.md
docs/rqsdk/: RQSDK_MANUAL.md
docs/specs/: 2026-04-23-rqdata-download-plan.md
examples/: buy_and_hold.py  init_rqdata.py
rq_lab/: __init__.py  backtest.py
scripts/: download.py  full_pipeline.py  test_connection.py
scripts/attribution/: performance_attribution.py
scripts/backtest/: buy_and_hold.py
scripts/data/: download.py
tests/: __init__.py  test_common.py
utils/: common.py
(+4 files in other folders)
