[project]
name = "rq-lab"
version = "0.1.0"
description = "米筐量化工具套件研究项目"
authors = [
    {name = "Zack Chang",email = "zhangchunyucoldfish@126.com"}
]
requires-python = "^3.12"
dependencies = [
    "rqsdk (>=1.7.1,<2.0.0)"
]


packages = [{include = "rq_lab"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

